2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/staff-symbol.cc (print): subtract thickness from staff line
	length

	* lily/parser.yy (book_body): disallow { ..music.. } inside \book
	
2004-08-21  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/stencil.scm: remove fontify-text and fontify-text-white

2004-08-21  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/part-combiner.scm: skip name string. Fixes segfault problem.

	* Documentation/user/sound-output.texi (Sound): new file. Move all
	MIDI related information.

2004-08-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/script-engraver.cc (acknowledge_grob): only take into
	account note heads with a music cause. Fixes ambitus-accent.ly

	* scm/define-markup-commands.scm (finger): set encoding to
	fetaNumber.

2004-08-20  Erik Sandberg <ersa9195@student.uu.se>

	* scripts/convert-ly.py: typo

2004-08-19  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/fret-diagrams.scm: Eliminate use of fontify-text; make 
	font calls for diagrams based on paper and props

2004-08-19  Graham Percival <gperlist@shaw.ca>

	* scripts/convert-ly.py: add \newpage -> \pageBreak rule.

2004-08-19  Erik Sandberg <ersa9195@student.uu.se>

	* ly/spanners-init.ly: Correct meanings of setTextDecresc/Dim,
	added setHairpinDecresc/Dim

2004-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/lily-guile.hh: Cosmetics.

2004-08-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/fermata-rest-position.ly: new file

	* ly/property-init.ly (hideNotes): remove \setMmRestFermata

	* scripts/convert-ly.py (conv): add rule for \setMmRestFermata

2004-08-18  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/framework-tex.scm (output-preview-framework) 
	(output-classic-framework): 
	* scm/framework-ps.scm (output-preview-framework):
	s/ly:paper-book-lines/ly:paper-book-systems/g

	* scm/fret-diagrams.scm (ss-font-encoding):
	s/my-font-encoding/ss-font-encoding

2004-08-18  Mats Bengtsson  <mabe@drongo.s3.kth.se>
