@@ -1,5 +1,8 @@
 2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/completion-note-heads-engraver.cc (process_music): set
+	duration-log before announcing object.
+	
 	* lily/staff-symbol.cc (print): subtract thickness from staff line
 	length
 
